# spotify-passport

./: .gitignore  Cargo.toml  README.md  app.js  app.py  app_alt.py  fetch_auth.js  front.html  main.py  page.html  sp_app.py  style.css
actix/: Cargo.toml
actix/src/: lib.rs  main.rs  route.rs
actix/src/musixmatch/: mod.rs
actix/src/oauth/: auth.rs  example.rs  sp_auth.rs
actix/src/spotify/: driver.rs
actix/static/css/: style.css
html/: error.html  index.html  main.html
map/: geochart.js  page.html  triggerMap.js
musixmatch/: api.py  artist.py  config.py  models.py
public/: auth.html  main.html
public/map/: geochart.js  triggerMap.js
spotify_passport/src/: main.rs
spotify_passport/src/musixmatch/: artist.rs  musix.rs
spotify_passport/src/spotify/: user.rs
src/: auth.py  build_map.py  fetchCountry.py  fetchSpotify.py  fetch_data.js  lib.rs  main.py  main.rs  musix_alt.py  route.rs
src/musixmatch/: mod.rs  musix.rs
src/sp_oauth/: auth.rs
src/spotify/: api.rs  artist.rs  driver.rs  mod.rs  playlist.rs  track.rs  user.rs
static/css/: style.css
static/js/: buttons.js  geochart.js  helper.js  triggerLogin.js  triggerMap.js  trigger_login.js
templates/: auth.html  index.html  login.html  main.html  style.css
