[package]
name = "spotify_passport"
version = "0.1.0"
authors = ["Marcelo Almeida <marceloalmeida98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spotify_lib"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-session = "0.3.0"
actix-files = "0.2.2"
awc = "1.0.1"
oauth2 = "3.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
urlencoding = "1.1.1"
regex = "1.3.9"